Fixed project formatting on mobile again

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@media (min-width:786px){
+@media (max-width:992px){
   .projectImage{
     order: -1;
   }
